# ldd_winit

./: .pubignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ldd_winit_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: ldd_winit.podspec
ios/Classes/: ldd_winit.c
lib/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  ldd_winit.dart  ldd_winit_bindings_generated.dart
lib/api/: winit.dart
linux/: CMakeLists.txt
macos/: ldd_winit.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: winit.rs
src/: CMakeLists.txt  ldd_winit.c
windows/: CMakeLists.txt
